js text is work

--- a/Old site-Remake/index.html
+++ b/Old site-Remake/index.html
@@ -13,32 +13,20 @@
         <nav class="buttslider-bar">
             <ul class="buttslider-list">
                 <li class="buttslider-item">
-                    <a href="" class="buttslider-link">
-                        <h3 class="buttslider-tittle"  onclick="lifestyle()">
-                            Lifestyle
-                        </h3>
-                    </a>
+                    <input class="buttslider-tittle" onclick="lifestyleText()" value="Lifestyle" readonly>
+                </input>
                 </li>
                 <li class="buttslider-item">
-                    <a href="" class="buttslider-link">
-                        <h3 class="buttslider-tittle">
-                            Photodiary
-                        </h3>
-                    </a>
+                    <input class="buttslider-tittle" onclick="photodiaryText()" value="Photodiary" readonly>
+                </input>
                 </li>
                 <li class="buttslider-item">
-                    <a href="" class="buttslider-link">
-                        <h3 class="buttslider-tittle">
-                            Music
-                        </h3>
-                    </a>
+                    <input class="buttslider-tittle" onclick="musicText()" value="Music" readonly>
+                </input>
                 </li>
                 <li class="buttslider-item">
-                    <a href="" class="buttslider-link">
-                        <h3 class="buttslider-tittle">
-                            Travel
-                        </h3>
-                    </a>
+                    <input class="buttslider-tittle" onclick="travelText()" value="Travel" readonly>
+                </input>
                 </li>
             </ul>
         </nav>
