js function #2 its work

--- a/Old site-Remake/index.html
+++ b/Old site-Remake/index.html
@@ -33,11 +33,8 @@
     </header>
     <section class="slide-section">
         <div class="slidebox">
-            <h2 class="slide-tittle" id="tittle">Lifestyle</h2>
-            <!-- <div class="background">
-                <h1>ТЕКСТ</h1>
-              </div>   -->
-            <img class="slide-img" src="img/girl_image.png" id="image">
+            <h2 class="slide-tittle" id="tittle"></h2>
+            <img class="slide-img" src="" id="image">
             <p class="lorem-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam sunt necessitatibus nesciunt.</p>
         </div>
     </section>
