--- a/Old site-Remake/index.html
+++ b/Old site-Remake/index.html
@@ -6,6 +6,7 @@
     <title>Old site | Remake version</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fonts/fonts.css">
+    <link rel="icon" href="img/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap" rel="stylesheet">
 </head>
 <body>
