--- a/Old site-Remake/index.html
+++ b/Old site-Remake/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="fonts/fonts.css">
     <link rel="icon" href="img/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -37,7 +39,7 @@
             <h2 class="call-tittle" id="calltittle">По-нажимайте на кнопки сверху этого текста, и сами все увидите</h2>
             <h2 class="slide-tittle" id="tittle"></h2>
             <img class="slide-img" src="" id="image" alt="">
-            <p class="lorem-text" id="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam sunt necessitatibus nesciunt.</p>
+            <p class="lorem-text" id="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit huibusdam sunt necessitatibus nesciunt</p>
         </div>
     </section>
     <script src="buttSlider.js">
