--- a/Old site-Remake/index.html
+++ b/Old site-Remake/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Do+Hyeon:regular" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -42,8 +43,6 @@
             <p class="lorem-text" id="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit huibusdam sunt necessitatibus nesciunt</p>
         </div>
     </section>
-    <script src="buttSlider.js">
-
-    </script>
+    <script src="buttSlider.js"></script>
 </body>
 </html>
