--- a/Old site-Remake/index.html
+++ b/Old site-Remake/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Old site | Remake version</title>
+    <title>Old site | Remake new version</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fonts/fonts.css">
     <link rel="icon" href="img/favicon.ico">
