update js  script

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="slidebox">
             <h2 class="call-tittle" id="calltittle">По-нажимайте на кнопки сверху этого текста, и сами все увидите</h2>
             <h2 class="slide-tittle" id="tittle"></h2>
-            <img class="slide-img" src="" id="image" alt="">
+            <img class="slide-img" src="" id="slide-image" alt="">
             <p class="lorem-text" id="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit huibusdam sunt necessitatibus nesciunt</p>
         </div>
     </section>
