f@#ck user-select

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="buttslider-bar">
             <ul class="buttslider-list">
                 <li class="buttslider-item">
-                    <input class="buttslider-tittle" onclick="lifestyleText()" value="Lifestyle" readonly>
+                    <input class="buttslider-tittle ftittle" onclick="lifestyleText()" value="Lifestyle" readonly>
                 </input>
                 </li>
                 <li class="buttslider-item">
