--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Old site | Remake new version</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/iconf.ico">
@@ -38,7 +39,7 @@
             <div class="slidebox">
                 <h2 class="call-tittle" id="calltittle">По-нажимайте на кнопки сверху этого текста, и сами все увидите</h2>
                 <h2 class="slide-tittle" id="tittle"></h2>
-                <img class="slide-img" src="" id="slide-image" alt="">
+                <img class="slide-img" src="" id="slide-image">
                 <p class="lorem-text" id="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit huibusdam sunt necessitatibus nesciunt</p>
             </div>
         </section>
