rename js script

--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
             </div>
         </section>
     </div>
-    <script src="buttSlider.js"></script>
+    <script src="mainscript.js"></script>
 </body>
 </html>
